--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^6.4.4",
     "@tailwindcss/vite": "^4.0.6",
     "@toolpad/core": "^0.12.0",
+    "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-js-loader": "^0.1.3",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6"
   },
